adding components folders

--- a/frontend/src/app/components/task-list/task-list.component.html
+++ b/frontend/src/app/components/task-list/task-list.component.html
@@ -1,3 +1,5 @@
+<app-navbar></app-navbar>
+
 <table class="table">
   <thead>
     <tr>
@@ -56,3 +58,5 @@
     </tr>
   </tbody>
 </table>
+
+<app-footer></app-footer>
