adding container class to item list

--- a/frontend/src/app/components/task-list/task-list.component.html
+++ b/frontend/src/app/components/task-list/task-list.component.html
@@ -1,62 +1,64 @@
-<app-navbar></app-navbar>
+<div class="container">
+  <app-navbar></app-navbar>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col"></th>
-      <th scope="col">Name</th>
-      <th scope="col"></th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>
-        <input
-          class="form-check-input"
-          type="checkbox"
-          value=""
-          id="defaultCheck1"
-        />
-      </td>
-      <td>Otto</td>
-      <td>
-        <input
-          type="checkbox"
-          class="btn-check"
-          id="btn-check-2-outlined"
-          autocomplete="off"
-        />
-        <label class="btn btn-outline-secondary" for="btn-check-2-outlined"
-          >Completed</label
-        ><br />
-      </td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>
-        <input
-          class="form-check-input"
-          type="checkbox"
-          value=""
-          id="defaultCheck1"
-        />
-      </td>
-      <td>Thornton</td>
-      <td>
-        <input
-          type="checkbox"
-          class="btn-check"
-          id="btn-check-3-outlined"
-          autocomplete="off"
-        />
-        <label class="btn btn-outline-secondary" for="btn-check-3-outlined"
-          >Completed</label
-        ><br />
-      </td>
-    </tr>
-  </tbody>
-</table>
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col"></th>
+        <th scope="col">Name</th>
+        <th scope="col"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>
+          <input
+            class="form-check-input"
+            type="checkbox"
+            value=""
+            id="defaultCheck1"
+          />
+        </td>
+        <td>Otto</td>
+        <td>
+          <input
+            type="checkbox"
+            class="btn-check"
+            id="btn-check-2-outlined"
+            autocomplete="off"
+          />
+          <label class="btn btn-outline-secondary" for="btn-check-2-outlined"
+            >Completed</label
+          ><br />
+        </td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>
+          <input
+            class="form-check-input"
+            type="checkbox"
+            value=""
+            id="defaultCheck1"
+          />
+        </td>
+        <td>Thornton</td>
+        <td>
+          <input
+            type="checkbox"
+            class="btn-check"
+            id="btn-check-3-outlined"
+            autocomplete="off"
+          />
+          <label class="btn btn-outline-secondary" for="btn-check-3-outlined"
+            >Completed</label
+          ><br />
+        </td>
+      </tr>
+    </tbody>
+  </table>
 
-<app-footer></app-footer>
+  <app-footer></app-footer>
+</div>
