--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -1,3 +1,3 @@
-<div class="fixed-bottom" style="text-align: center">
+<div class="fixed-bottom" id="footer">
   <span>&#64;Copyright {{year}}</span>
 </div>
