Adding router with active class

--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -6,9 +6,21 @@
 
 <ul class="nav nav-underline">
   <li class="nav-item">
-    <a class="nav-link" aria-current="page" href="#">Active Tasks</a>
+    <a
+      class="nav-link"
+      routerLinkActive="active"
+      routerLink="/unfinished"
+      arialCurrentWhenActive="page"
+      >Active Tasks</a
+    >
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Completed Tasks</a>
+    <a
+      class="nav-link"
+      routerLinkActive="active"
+      routerLink="/finished"
+      arialCurrentWhenActive="page"
+      >Completed Tasks</a
+    >
   </li>
 </ul>
