adding title style

--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,8 +1,6 @@
-<nav class="navbar">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">To-Do</a>
-  </div>
-</nav>
+<div id="title">
+  <h1>To-Do</h1>
+</div>
 
 <ul class="nav nav-underline">
   <li class="nav-item">
