--- a/frontend/src/app/components/task-list/task-list.component.html
+++ b/frontend/src/app/components/task-list/task-list.component.html
@@ -15,13 +15,14 @@
         <th scope="row">{{task.id}}</th>
         <td>
           <input class="form-check-input" type="checkbox" value="" [checked]="task.status == 'finished'"
-            id="defaultCheck1" />
+            id="defaultCheck1" (click)="handleCheckBoxClick(task.id)" />
         </td>
         <td>{{task.name}}</td>
         <td>
-          <input type="checkbox" class="btn-check" id="btn-check-2-outlined" autocomplete="off"
-            [checked]="task.status == 'finished'" />
-          <label class="btn btn-outline-secondary" for="btn-check-2-outlined">Completed</label><br />
+          <input type="checkbox" class="btn-check" [id]="'btn-check-'+ task.id + '-outlined'" autocomplete="off"
+            [checked]="task.status == 'finished'" (click)="handleCheckBoxClick(task.id)" />
+          <label class="btn btn-outline-secondary"
+            [for]="'btn-check-' + task.id + '-outlined'">{{task.status}}</label><br />
         </td>
       </tr>
     </tbody>
