--- a/frontend/src/app/components/task-list/task-list.component.html
+++ b/frontend/src/app/components/task-list/task-list.component.html
@@ -11,8 +11,8 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let task of tasks">
-        <th scope="row">{{task.id}}</th>
+      <tr *ngFor="let task of tasks; index as i">
+        <th scope="row">{{i + 1}}</th>
         <td>
           <input class="form-check-input" type="checkbox" value="" [checked]="task.status == 'finished'"
             id="defaultCheck1" (click)="handleCheckBoxClick(task.id)" />
