--- a/frontend/src/app/components/task-list/task-list.component.html
+++ b/frontend/src/app/components/task-list/task-list.component.html
@@ -15,12 +15,12 @@
         <th scope="row">{{i + 1}}</th>
         <td>
           <input class="form-check-input" type="checkbox" value="" [checked]="isTaskFinished(task.status)"
-            id="defaultCheck1" />
+            id="defaultCheck1" (click)="handleButtonClick(task.id)"/>
         </td>
         <td>{{task. name}}</td>
         <td>
           <input type="checkbox" class="btn-check" [id]="'btn-check-'+ task.id + '-outlined'" autocomplete="off"
-            [checked]="isTaskFinished(task.status)" />
+            [checked]="isTaskFinished(task.status)" (click)="handleButtonClick(task.id)"/>
           <label class="btn btn-outline-secondary"
             [for]="'btn-check-' + task.id + '-outlined'">{{task.status}}</label><br />
         </td>
