--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -30,7 +30,8 @@
         <form>
           <div class="mb-3">
             <label for="nameInput" class="form-label">Name</label>
-            <input type="text" class="form-control" id="nameInput" aria-describedby="nameHelp">
+            <input type="text" class="form-control" id="nameInput" name="taskInput" aria-describedby="nameHelp"
+              [(ngModel)]="taskName">
           </div>
           <button type="submit" class="btn btn-success btn-sm">Submit</button>
         </form>
