--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -31,9 +31,9 @@
           <div class="mb-3">
             <label for="nameInput" class="form-label">Name</label>
             <input type="text" class="form-control" id="nameInput" name="taskInput" aria-describedby="nameHelp"
-              [(ngModel)]="taskName">
+              [(ngModel)]="name">
           </div>
-          <button type="submit" class="btn btn-success btn-sm">Submit</button>
+          <button type="submit" class="btn btn-success btn-sm" (click)="addTask()">Submit</button>
         </form>
       </div>
       <div class="modal-footer">
