--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -26,14 +26,15 @@
         <h1 class="modal-title fs-5" id="exampleModalLabel">New Task</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
+      
       <div class="modal-body">
-        <form>
+        <form [formGroup]="addTaskForm" (ngSubmit)="addTask()">
           <div class="mb-3">
-            <label for="nameInput" class="form-label">Name</label>
-            <input type="text" class="form-control" id="nameInput" name="taskInput" aria-describedby="nameHelp"
-              [(ngModel)]="name">
+            <label for="name" class="form-label">Name</label>
+            <input type="text" class="form-control" id="name" aria-describedby="nameHelp"
+              formControlName="name">
           </div>
-          <button type="submit" class="btn btn-success btn-sm" (click)="addTask()">Submit</button>
+          <button type="submit" class="btn btn-success btn-sm" data-bs-dismiss="modal">Submit</button>
         </form>
       </div>
       <div class="modal-footer">
