--- a/frontend/src/app/components/task-list/task-list.component.html
+++ b/frontend/src/app/components/task-list/task-list.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 
   <app-navbar></app-navbar>
-  
+
   <br />
   <table class="table">
     <thead>
@@ -27,7 +27,7 @@
           <label class="btn btn-sm btn-outline-secondary"
             [for]="'btn-check-' + task.id + '-outlined'">{{task.status}}</label><br />
         </td>
-        <td><button class="btn btn-danger btn-sm">Delete</button></td>
+        <td><button class="btn btn-danger btn-sm" (click)="deleteTask(task.id)">Delete</button></td>
       </tr>
     </tbody>
   </table>
