--- a/frontend/src/app/components/task-list/task-list.component.html
+++ b/frontend/src/app/components/task-list/task-list.component.html
@@ -3,6 +3,7 @@
   <app-navbar></app-navbar>
 
   <br />
+  <p [class]="'alert alert-' + message?.status">{{message?.message}}</p>
   <table class="table">
     <thead>
       <tr>
