--- a/frontend/src/app/components/message/message.component.html
+++ b/frontend/src/app/components/message/message.component.html
@@ -1,12 +1,9 @@
-<button #toastTriggerBtn (click)="showToast()" type="button" class="btn btn-primary" id="liveToastBtn">Show live
-    toast</button>
-
 <div class="toast-container position-fixed bottom-0 end-0 p-3">
-    <div #toastLiveExample class="toast align-items-center text-bg-success border-0" role="alert" aria-live="assertive"
+    <div #toastLiveExample [class]="'toast align-items-center text-bg-' + message.status +' border-0'" role="alert" aria-live="assertive"
         aria-atomic="true">
         <div class="d-flex">
             <div class="toast-body">
-                Hello, world! This is a toast message.
+                {{message.message}}
             </div>
             <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"
                 aria-label="Close"></button>
