updating delete task name

--- a/frontend/src/app/components/task-list/task-list.component.html
+++ b/frontend/src/app/components/task-list/task-list.component.html
@@ -29,7 +29,7 @@
           <label class="btn btn-sm btn-outline-secondary"
             [for]="'btn-check-' + task.id + '-outlined'">{{task.status}}</label><br />
         </td>
-        <td><button class="btn btn-danger btn-sm" (click)="deleteTask(task.id)">Delete</button></td>
+        <td><button class="btn btn-danger btn-sm" (click)="deleteTask(task)">Delete</button></td>
       </tr>
     </tbody>
   </table>
