--- a/frontend/src/app/components/message/message.component.html
+++ b/frontend/src/app/components/message/message.component.html
@@ -1,6 +1,6 @@
 <div class="toast-container position-fixed bottom-0 end-0 p-3">
-    <div #toastLiveExample [class]="'toast align-items-center text-bg-' + message.status +' border-0'" role="alert" aria-live="assertive"
-        aria-atomic="true">
+    <div #toastLiveExample [class]="'toast align-items-center text-bg-' + message.status +' border-0'" role="alert"
+        aria-live="assertive" aria-atomic="true">
         <div class="d-flex">
             <div class="toast-body">
                 {{message.message}}
