--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -31,7 +31,8 @@
         <form [formGroup]="addTaskForm" (ngSubmit)="addTask()">
           <div class="mb-3">
             <label for="name" class="form-label">Name</label>
-            <input type="text" class="form-control" id="name" aria-describedby="nameHelp" formControlName="name">
+            <input type="text" class="form-control" placeholder="Task Name" id="name" aria-describedby="nameHelp"
+              formControlName="name">
           </div>
           <button type="submit" class="btn btn-success btn-sm" data-bs-dismiss="modal">Submit</button>
         </form>
