--- a/frontend/src/app/components/task-list/task-list.component.html
+++ b/frontend/src/app/components/task-list/task-list.component.html
@@ -13,6 +13,7 @@
         <th scope="col">Name</th>
         <th scope="col"></th>
         <th scope="col"></th>
+        <th scope="col"></th>
       </tr>
     </thead>
     <tbody>
@@ -29,6 +30,8 @@
           <label class="btn btn-sm btn-outline-secondary"
             [for]="'btn-check-' + task.id + '-outlined'">{{task.status}}</label><br />
         </td>
+        <td><button type="button" class="btn btn-primary btn-sm" (click)="openEditTaskModal(task)" data-bs-toggle="modal"
+            data-bs-target="#editTaskModal">Edit</button></td>
         <td><button class="btn btn-danger btn-sm" (click)="deleteTask(task)">Delete</button></td>
       </tr>
     </tbody>
@@ -38,4 +41,33 @@
   </div>
 
   <app-footer></app-footer>
+
+  <!-- Edit Task modal -->
+  <div #editTaskModal class="modal fade" id="editTaskModal" tabindex="-1" aria-labelledby="editTaskModalLabel"
+    aria-hidden="true" (hidden)="clearModal()">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="editTaskModalLabel">Edit Task</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form [formGroup]="editTaskForm" (ngSubmit)="submitEditedTask()">
+            <div class="mb-3">
+              <input type="text" formControlName="id" id="id" hidden>
+              <label for="name" class="form-label">Name</label>
+              <input type="text" class="form-control" placeholder="Task Name" id="name" aria-describedby="nameHelp"
+                formControlName="name">
+            </div>
+            <button type="submit" class="btn btn-success btn-sm" data-bs-dismiss="modal">Edit</button>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
 </div>
